new landing page design

--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -1,45 +1,61 @@
 <div class="container-fluid">
-  <div class="container footer-2">
-    <div class="row" style="padding: 30px 0px">
+  <div class="container footer-2" style="padding: 30px 0px">
+    <div class="row">
       <div class="col-sm-12 col-md-6 text-center text-sm-center text-md-start">
         <div class="footer-text-container">
           <div class="pt-3">
-            <h3 class="footer-logo"><img src="assets/images/shyft_logo_2.svg" style="width: 115px;" alt="Shyft"></h3>
-          </div>
-          <div>
-            <div
-              class="text-center text-sm-center text-md-start pt-3"
-              style="width: 100%"
-            >
-              <span>
-                <span class="footer-icons"
-                  ><a href="mailto:team@shyft.to" target="_blank"
-                    ><img
-                      src="assets/images/Icons/small-gmail.svg"
-                      alt="Shyft Email"/></a
-                ></span>
-                <span class="footer-icons"
-                  ><a href="https://twitter.com/shyft_to" target="_blank"
-                    ><img
-                      src="assets/images/Icons/small-twitter.svg"
-                      alt="Shyft Twitter"/></a
-                ></span>
-                <span class="footer-icons"
-                  ><a href="https://discord.gg/UypKpEH9" target="_blank"
-                    ><img
-                      src="assets/images/Icons/small-discord.svg"
-                      alt="Shyft Discord"/></a
-                ></span>
-              </span>
-            </div>
+            <h3 class="footer-logo">
+              <img src="assets/images/shyft logo.svg" alt="" />
+            </h3>
           </div>
         </div>
       </div>
-      <!-- <div class="col-sm-12 col-md-6 text-center text-sm-center text-md-end">
-          <div class="footer-link-container pt-5">
-            <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policies</a>
+      <div class="col-sm-12 col-md-6 text-center text-sm-center text-md-end">
+        <div>
+          <div
+            class="text-center text-sm-center text-md-end pt-3"
+            style="width: 100%"
+          >
+            <span>
+              <span class="footer-icons"
+                ><a href="#"
+                  ><img
+                    src="assets/images/Icons/small-github.svg"
+                    alt="Gmail" /></a
+              ></span>
+              <span class="footer-icons"
+                ><a href="#"
+                  ><img
+                    src="assets/images/Icons/small-twitter.svg"
+                    alt="Twitter" /></a
+              ></span>
+              <span class="footer-icons"
+                ><a href="https://discord.com/invite/BvqNeDSY" target="_blank"
+                  ><img
+                    src="assets/images/Icons/small-discord.svg"
+                    alt="Discord"/></a
+              ></span>
+            </span>
           </div>
-        </div> -->
+        </div>
+      </div>
+    </div>
+    <div class="row d-flex justify-content-center">
+      <div class="col-6 col-sm-6 col-lg-4 text-center text-lg-start">
+        <div class="footer-link-container p-1">
+          <a href="mailto:team@shyft.to">Contact: team@shyft.to</a>
+        </div>
+      </div>
+      <div class="col-6 col-sm-6 col-lg-4 text-center">
+        <div class="footer-link-container p-1">
+          <a href="https://docs.shyft.to" target="_blank">Documentation</a>
+        </div>
+      </div>
+      <div class="col-6 col-sm-6 col-lg-4 text-center text-lg-end">
+        <div class="footer-link-container p-1">
+          <a routerLink="/terms">Terms & Conditions</a> | <a href="#">Privacy Policies</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
