Added Changes to Landing

--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -42,18 +42,18 @@
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-6 col-sm-6 col-lg-4 text-center text-lg-start">
-        <div class="footer-link-container p-1">
+        <div class="footer-link-container pt-5">
           <a href="mailto:team@shyft.to">Contact: team@shyft.to</a>
         </div>
       </div>
       <div class="col-6 col-sm-6 col-lg-4 text-center">
-        <div class="footer-link-container p-1">
+        <div class="footer-link-container pt-5">
           <a href="https://docs.shyft.to" target="_blank">Documentation</a>
         </div>
       </div>
       <div class="col-6 col-sm-6 col-lg-4 text-center text-lg-end">
-        <div class="footer-link-container p-1">
-          <a routerLink="/terms">Terms & Conditions</a> | <a href="#">Privacy Policies</a>
+        <div class="footer-link-container pt-5">
+          <a routerLink="/terms">Terms & Conditions</a>
         </div>
       </div>
     </div>
