--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarButtonsExample">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
 
-      <div class="d-flex align-items-center">
+      <div class="d-flex align-items-center custom-nav-links">
         <a type="button" class="btn btn-link px-3 me-2" href="https://api.shyft.to/sol/api/explore" target="_blank"> APIs </a>
         <a type="button" href="#the_pricing" class="btn btn-link px-3 me-2"> Pricing </a>
         <a type="button" class="btn btn-link px-3 me-2" href="https://docs.shyft.to" target="_blank"> Docs </a>
